# ConnectFour

./: .gitignore
script/: enable
script/execute/linux/: enable
script/setup/linux/: fedora  ubuntu
script/setup/windows/: mingw.md
src/: CMakeLists.txt  main.h
src/game/: start_game.c  start_game.h
src/instructions/: view_instructions.c
src/menu/: show_menu.c  show_menu.h
src/sGame/: sGame.c  sGame.h
src/state/: show_state.c
src/vInstructions/: vInstructions.c
src/vMain/: vMain.c
src/vWin/: vWin.c  vWin.h
